# wfetch-rs

./: Cargo.toml  LICENSE  README.md  config.toml  readme.md
src/: args.rs  main.rs
